[package]
name = "anathema-widget-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["logging"]
testing = []
logging = ["log"]

[dependencies]
anathema-render = { path = "../anathema-render" }
bitflags = { workspace = true }
unicode-width = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
parking_lot = "0.12.1"
log = { version = "0.4.19", optional = true }

